fix: styling -> EventDetails navbar now hidden, list events z-index

--- a/Event_Tracker_App/Event.Tracker.Web/src/nav/NavbarTop.css
+++ b/Event_Tracker_App/Event.Tracker.Web/src/nav/NavbarTop.css
@@ -6,7 +6,7 @@
     width: 100%;
     height: 10vh;
     padding: 0% 5%;
-    z-index: 1000;
+    z-index: 2;
 
     display: flex;
     justify-content: space-between;
@@ -16,6 +16,10 @@
 
     backdrop-filter: blur(7px);
     -webkit-backdrop-filter: blur(7px);
+}
+.navtop-container.inactive{
+    z-index: -1;
+    visibility: hidden;
 }
     .navtop__item{
         display: flex;
